# icloud-manager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
app/: actions.py  analyser.py  config.py  geocoder.py  icloud_source.py  index.py  main.py  models.py  recommender.py  scanner.py  twofactor.py
docs/: asset-index-research-spike.md
scripts/: index_archive.py  reconcile_archive.py
tests/: test_actions.py  test_analyser.py  test_config.py  test_icloud_source.py  test_index.py  test_scanner.py
